tests/negative/regression/r19.orng
// r19.orng:6:13: error: error: expected a compile-time constant type, got slice_of
//     let d: []{}
//            ^
// 
fn main() -> () { 
    let d: []{}
    _ = d
} 